Сделаны обязательные 7 шагов

--- a/app/index/templates/post.html
+++ b/app/index/templates/post.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SKYPROGRAM post</title>
-  <link href="static/css/styles.min.css" rel="stylesheet">
+  <link href="../static/css/styles.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -27,38 +27,36 @@
     <section class="items">
       <div class="items__item item item--post">
         <div class="item__top">
-          <a href="/user-feed.html" class="item__head">
+          <a href="/posts/{{post_info['poster_name']}}" class="item__head">
             <div class="item__ava-wrap">
-              <img src="img/ava1.png" alt="" class="item__ava" width="47">
+              <img src="{{post_info['poster_avatar']}}" alt="" class="item__ava" width="57">
             </div>
-            <span class="item__username">Username</span>
+            <span class="item__username"><h1>{{post_info['poster_name']}}</h1></span>
           </a>
           <button type="button" class="item__bookmark-btn">
-            <img src="img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
+            <img src="/static/img/bookmark.png" alt="" class="item__bookmark-icon" width="16">
           </button>
         </div>
         <a href="" class="item__post-link">
-          <img src="img/post1.jpg" alt="" width="348" class="item__post-img">
+          <img src="{{post_info['pic']}}" alt="" width="348" class="item__post-img">
         </a>
         <div class="item__descr">
           <p class="item__text">
-            Закрытые бутерброды пришли к&nbsp;нам из&nbsp;Англии. Вкусные и&nbsp;простые рецепты сэндвичей с&nbsp;фото позволят вам разнообразить завтраки и&nbsp;сделать перекусы более сытными! Они могут быть, как горячими, так и&nbsp;холодными.
+           {{post_info['content']}}
           </p>
-          <p class="item__text">
-            Итальянские закрытые сэндвичи называются панини. Для их&nbsp;приготовления берут чиабатту. В&nbsp;классическом рецепте используют традиционные итальянские продукты: помидоры, базилик, мацареллу.</p>
-        </div>
+          </div>
         <div class="item__bottom">
           <div class="item__post-info">
-            <p class="item__comments-counter">3 комментария</p>
+            <p class="item__comments-counter">{{len_list}} комментария(ий)</p>
             <div class="item__counter">
-              <img src="img/eye.png" alt="" class="item__counter-icon" width="26">
-              <span class="item__counter-text">1023</span>
+              <img src="../static/img/eye.png" alt="" class="item__counter-icon" width="26">
+              <span class="item__counter-text">{{post_info['views_count']}}</span>
             </div>
           </div>
           <div class="item__comments">
-            {% %}
+            {% for i in list_comments  %}
             <p class="item__comment">
-              <b>user 1:</b> комментарий пользователя который его оставил
+              <b>{{i["commenter_name"]}}:</b> {{i["comment"]}}
             </p>
             {% endfor %}
           </div>
